# mlg1

./: .gitignore  NOTES.md  README.md  TODO.md  pyproject.toml  requirements.txt
examples/: balls.mlg1  clamp.mlg1  elif.mlg1  floodfill.mlg1  paint.mlg1  pong.mlg1  snake.mlg1
mlg1/compiler/: compiler.py  constants.py  data.py  expression.py  file.py  util.py
mlg1/parser/: mlg1.g4  mlg1.interp  mlg1.tokens  mlg1Lexer.interp  mlg1Lexer.py  mlg1Lexer.tokens  mlg1Listener.py  mlg1Parser.py
mlg1/stdlib/: audio.mlg1  bytes.mlg1  color.mlg1  float.mlg1  math.mlg1  output.mlg1  raster.mlg1  string.mlg1  tex.mlg1
src/: mlg1.py
src/parser/: build.sh  mlg1.g4  mlg1.interp  mlg1.tokens  mlg1Lexer.interp  mlg1Lexer.py  mlg1Lexer.tokens  mlg1Listener.py  mlg1Parser.py
wip-programs/: array.mlg1  floodfill.mlg1  infix.mlg1  loop.mlg1  paint.mlg1  platformer.mlg1  snake.mlg1  test.mlg1  tex.mlg1  texold.mlg1
